--- a/publications.bib
+++ b/publications.bib
@@ -1,7 +1,7 @@
 @article{rapid_spatial_learning_2025,
 title= {\textit{In prep}Rapid spatial learning via efficient exploration and inference}, 
 author={Abdelrahman, Nada and Jiang, Wanchen and Dudman, Joshua T. and Hermundstad, Ann M.}
-year={2025}
+year={2025.}
 }
 
 @article{abdelrahman_compensatory_2021,
