--- a/publications.bib
+++ b/publications.bib
@@ -1,8 +1,8 @@
-@article{rapid_spatial_learning_2025,
+@inproceedings{rapid_spatial_learning_2025,
 title= {Rapid spatial learning via efficient exploration and inference}, 
 author={Abdelrahman, Nada and Jiang, Wanchen and Dudman, Joshua T. and Hermundstad, Ann M.},
 year={2025},
-month=March,
+month=mar,
 conference=Cosyne 2025
 }
 
