--- a/publications.bib
+++ b/publications.bib
@@ -28,7 +28,7 @@ booktitle={Cosyne2025}
 }
 
 
-@phdthesis{abdelrahman_modeling_2023,
+@article{abdelrahman_modeling_2023,
 	address = {United Kingdom},
 	title = {Modeling olfactory processing and insights on optimal learning in constrained neural networks: learning from the anatomy of the {Drosophila} mushroom body.},
 	url = {https://etheses.whiterose.ac.uk/31211/},
