--- a/publications.bib
+++ b/publications.bib
@@ -39,7 +39,7 @@ booktitle={Cosyne2025}
 	author = {Abdelrahman, Nada Y.},
 	month = mar,
 	year = {2023},
-	file = {Abdelrahman_Nada_180125504.pdf:C\:\\Users\\abdelrahmann\\Zotero\\storage\\UPMWBM2Y\\Abdelrahman_Nada_180125504.pdf:application/pdf},
+	file = {Abdelrahman_Nada_180125504.pdf:C\:\\Users\\abdelrahmann\\Zotero\\storage\\UPMWBM2Y\\Abdelrahman_Nada_180125504.pdf:application/pdf}}
 
 
 @inproceedings{nada_abdelrahman_low_2016,
