--- a/publications.bib
+++ b/publications.bib
@@ -23,9 +23,8 @@ booktitle={Cosyne2025}
 	author = {Abdelrahman, Nada Y. and Vasilaki, Eleni and Lin, Andrew C.},
 	month = dec,
 	year = {2021},
-	pages = {e2102158118},
-	file = {abdelrahman-et-al-2021-compensatory-variability-in-network-parameters-enhances-memory-performance-in-the-drosophila.pdf:C\:\\Users\\abdelrahmann\\Downloads\\abdelrahman-et-al-2021-compensatory-variability-in-network-parameters-enhances-memory-performance-in-the-drosophila.pdf:application/pdf},
-}
+	pages = {e2102158118}
+  }
 
 
 @phdthesis{abdelrahman_modeling_2023,
