--- a/publications.bib
+++ b/publications.bib
@@ -37,13 +37,12 @@ booktitle={Cosyne2025}
 	school = {University of Sheffield},
 	author = {Abdelrahman, Nada Y.},
 	month = mar,
-	year = {2023},
-	file = {Abdelrahman_Nada_180125504.pdf:C\:\\Users\\abdelrahmann\\Zotero\\storage\\UPMWBM2Y\\Abdelrahman_Nada_180125504.pdf:application/pdf}}
+	year = {2023}}
 
 
 @inproceedings{nada_abdelrahman_low_2016,
 	title = {Low {Cost} {System} for {Screening} {Cardiovascular} {Diseases} in {Large} {Populations}: {Preliminary} {Results}},
 	author = {Nada Abdelrahman and Hossam El-Rewaidy and Ahmed Samir Fahmy},
 	month = feb,
-	year = {2016},
+	year = {2016}
 }
